@@ -21,10 +21,10 @@ ADD_DEFINITIONS("-DOBDLOGGER_MINOR_VERSION=${OBDLOGGER_MINOR_VERSION}")
 
 # This is the default serial port on my mac for my OBD Key
 SET(OBDLOGGER_DEFAULT_SERIALPORT "/dev/cu.OBDKeyPro-DevB-1" CACHE STRING "Default serial port filename")
-ADD_DEFINITIONS(-DDEFAULT_SERIAL_PORT=\\"${OBDLOGGER_DEFAULT_SERIALPORT}\\")
+ADD_DEFINITIONS(-DDEFAULT_SERIAL_PORT="\\"${OBDLOGGER_DEFAULT_SERIALPORT}"\\")
 
 SET(OBD_DEFAULT_DATABASE "./obdlogger.db" CACHE STRING "Default database filename for all obdgpslogger modules")
-ADD_DEFINITIONS(-DDEFAULT_DATABASE=\\"${OBD_DEFAULT_DATABASE}\\")
+ADD_DEFINITIONS(-DDEFAULT_DATABASE="\\"${OBD_DEFAULT_DATABASE}"\\")
 
 SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${OBDLogger_SOURCE_DIR}/cmakemodules")
 
